GNOME Bugzilla – Bug 766610
v4l2object: fix caps leak
Last modified: 2016-05-25 17:47:40 UTC
.
Created attachment 328141 [details] [review] v4l2object: fix caps leak gst_v4l2_object_probe_caps() was taking an extra ref on the returned caps for no reason.
Thanks. Attachment 328141 [details] pushed as 1840fa9 - v4l2object: fix caps leak
In 1.8 as commit 2b9b1d